--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,9 @@
 name: Jen's Itineraries
 markdown: redcarpet
 pygments: true
-markdown: redcarpet
 permalink: pretty
 exclude: 
   - s3_website.yml
   - README.md
+  - Gemfile
+  - Gemfile.lock
