Committing old changes. Looks safe.

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 name: Jen's Itineraries
 markdown: redcarpet
-pygments: true
+highlighter: pygments
 permalink: pretty
 exclude: 
   - s3_website.yml
